[package]
name = "cosjun_pull"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version ="0.11.14", features = ["json", "cookies"]}
anyhow = "1.0.68"
url-escape = "0.1.1"
cookie_store = "0.19.0"
reqwest_cookie_store = "0.5.0"
log = "0.4.17"
env_logger = "0.6.1"
visdom ="0.5.8"
tokio = { version = "1.25.0", features = ["full"] }
indicatif = "0.17.2"
walkdir = "2"

[[bin]]
name = "cospull"
path = "src/cospull/main.rs"

[[bin]]
name = "cosdup"
path = "src/cosdup/main.rs"